--- a/ui/app/home/views/login.html
+++ b/ui/app/home/views/login.html
@@ -1,5 +1,5 @@
 <div class="clint-logo-wrapper">
-    <img class="implementor-logo" src={{logo}} >
+    <img class="implementor-logo" src={{logo}}>
     <span ng-if="titleText" class="title_text"> {{'LOGIN_PAGE_TITLE_TEXT' | translate }} </span>
 </div>
 
@@ -11,7 +11,8 @@
         <div class="left">{{'LOGIN_LABEL_LOGIN_KEY' | translate}}</div>
         <div class="right locale-wrapper">
             <span class="locale-text">{{'LOGIN_LABEL_SELECT_LOCALE_KEY' | translate}} </span>
-            <select id="locale" ng-model="selectedLocale" ng-options="item.code as item.nativeName for item in locales" required/>
+            <select id="locale" ng-model="selectedLocale" ng-options="item.code as item.nativeName for item in locales"
+                required />
         </div>
     </header>
 
@@ -20,7 +21,7 @@
             <div class="note-container">
                 <div class="note error" ng-if="!isChrome()">
                     <div class="text">
-                    {{ 'LOGIN_UNSUPPORTED_BROWSER_KEY'  | translate }}
+                        {{ 'LOGIN_UNSUPPORTED_BROWSER_KEY'  | translate }}
                     </div>
                 </div>
                 <div class="note error" ng-show="errorMessageTranslateKey">
@@ -38,7 +39,7 @@
 
                 <div class="field-value">
                     <input type="text" name="username" id="username" ng-model="loginInfo.username" autofocus="autofocus"
-                           placeholder="{{'LOGIN_MESSAGE_ENTER_USERNAME_KEY' | translate}}">
+                        placeholder="{{'LOGIN_MESSAGE_ENTER_USERNAME_KEY' | translate}}">
                 </div>
             </div>
             <div class="form-field">
@@ -49,7 +50,7 @@
                 </div>
                 <div class="field-value">
                     <input type="password" id="password" name="password" ng-model="loginInfo.password"
-                           placeholder="{{'LOGIN_MESSAGE_ENTER_PASSWORD_KEY' | translate}}">
+                        placeholder="{{'LOGIN_MESSAGE_ENTER_PASSWORD_KEY' | translate}}">
                 </div>
             </div>
 
@@ -61,7 +62,8 @@
                 </div>
                 <div class="field-value">
                     <select id="location" ng-model="loginInfo.currentLocation"
-                            ng-options="item as (item.display | translate) for item in locations | orderBy:'display'" required>
+                        ng-options="item as (item.display | translate) for item in locations | orderBy:'display'"
+                        required>
                         <option value="">{{'LOGIN_LABEL_SELECT_LOCATION_KEY' | translate}}</option>
                     </select>
                 </div>
@@ -77,6 +79,9 @@
     <div class="warning-message">
         <span ng-if="warning"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> {{warning}}</span>
         <p>{{warningMessage | translate :timeZoneObject}} </p>
+    </div>
+    <div class="warning-message">
+        <p>THIS IS STILL AN ALPHA VERSION OF BAHMNI 0.92</p>
     </div>
 
     <div ng-show="bottomLogos" class="bottom-logos-wrapper">
@@ -95,7 +100,7 @@
         <div class="login-body">
             <div class="note-container">
                 <div class="note error" ng-show="errorMessageTranslateKey"
-                     ng-class="{'error_resend' : errorMessageTranslateKey == 'LOGIN_LABEL_RESEND_SUCCESS' }">
+                    ng-class="{'error_resend' : errorMessageTranslateKey == 'LOGIN_LABEL_RESEND_SUCCESS' }">
                     <div class="text">
                         {{errorMessageTranslateKey | translate}}
                     </div>
@@ -109,7 +114,7 @@
                 </div>
                 <div class="field-value">
                     <input type="password" id="otp" name="password" ng-model="loginInfo.otp"
-                           placeholder="{{'LOGIN_LABEL_ENTER_OTP_KEY' | translate}}" required>
+                        placeholder="{{'LOGIN_LABEL_ENTER_OTP_KEY' | translate}}" required>
                     <button type="button" ng-click="resendOTP()" class="fr otp-button">{{'LOGIN_LABEL_RESEND_OTP' |
                         translate}}
                     </button>
