--- a/ui/app/common/patient-search/views/patientsList.html
+++ b/ui/app/common/patient-search/views/patientsList.html
@@ -76,6 +76,10 @@
             <ul>
                 <li ng-repeat="patient in search.visiblePatients" class="active-patient" ng-click="forwardPatient(patient)">
                     <img class="smallImages" ng-src="{{::patient.image}}" fallback-src='../images/blank-user.png'>
+                    
+                    <!--Added patient Queue numbering-->
+                    <div>{{$index +1}}</div>
+                    
                     <div class="patient-name">{{::patient.name}}</div>
                     <div class="patient-id">{{::patient.identifier}}</div>
                     <i class="ipd-indication fa fa-bed" ng-if="::(patient.hasBeenAdmitted===true||patient.hasBeenAdmitted==='true')"></i>
