changes to the registration module

--- a/ui/app/registration/views/search.html
+++ b/ui/app/registration/views/search.html
@@ -71,10 +71,10 @@
                     <input tabindex="7" type="text" id="programAttribute" ng-model="searchParameters.programAttributeFieldValue" placeholder="{{ ::programAttributesSearchConfig.placeholder}}">
                 </article>
 
-                <article class="fl" ng-show="showNationalId()">
+                <!-- <article class="fl" ng-show="showNationalId()">
                     <label for="name"><strong>National ID Number</strong></label>
                     <input tabindex="8" type="text" id="nationalID" ng-model="searchParameters.nationalIdNumber" placeholder="Lesotho National ID">
-                </article>
+                </article> -->
 
 
                 <article class="fl">
