ported period and daysdispensed

--- a/ui/app/clinical/dashboard/views/clinicalDashboardHeader.html
+++ b/ui/app/clinical/dashboard/views/clinicalDashboardHeader.html
@@ -119,6 +119,12 @@
                     ng-bind-html="'CONSULTATION_TAB_KEY' | translate">
                  </a>
                  <a class="btn--left btn--success"
+                    ng-if="!retrospectiveEntry"
+                    ng-click="generateAssignPatientId()"
+                    accesskey="g"
+                    ng-bind-html="'UIDGEN_TAB_KEY' | translate">
+                 </a>
+             <a class="btn--left btn--success"
                      ng-click="opensharedhealthrecord()"
                      accesskey="{{'SHR_SHORTCUT_KEY ' | translate }}"
                      ng-bind-html="'SHR_TAB_KEY' | translate">
