--- a/ui/app/registration/views/search.html
+++ b/ui/app/registration/views/search.html
@@ -102,7 +102,13 @@
             <tr>
                 <th><strong>Patient Identifier</strong></th>
                 <th><strong>National ID</strong></th>
-                <th><strong>Name</strong></th>
+                <!--th><strong>Name</strong></th-->
+                <th ng-click="sortPatient('familyName');orderByField='familyName'"><strong>Name
+                    <span ng-show="orderByField == 'familyName'" class="sort-pos">
+                        <span ng-show="direction[0] === 'asc'"><i class="sort-by-asc"></i></span>
+                        <span ng-show="direction[0] === 'desc'"><i class="sort-by-asc"></i></span>
+                    </span>
+                </strong></th>
                 <th><strong>Surname</strong></th>
                 <th><strong>Gender</strong></th>
                 <th><strong>Age</strong></th>
@@ -131,15 +137,26 @@
         </table>
     </div>
 
+    <!-- HIE SEARCH LIST -->
     <!-- LOCAL SEARCH LIST -->
     
     <div ng-if="resultsPresent()" infinite-scroll="nextPage()" infinite-scroll-immediate-check="false" infinite-scroll-disabled="noMoreResultsPresent" class="registraition-search-results-container">
         <table class="table">
             <thead>
             <tr>
-                <th><strong>{{ ::'REGISTRATION_LABEL_ID' | translate}}</strong></th>
+                <th  ng-click="sortPatient('identifier'); orderByField='identifier'"><strong>{{ ::'REGISTRATION_LABEL_ID' | translate}}
+                    <span ng-show="orderByField == 'identifier'" class="sort-pos">
+                        <span ng-show="direction[0] === 'asc'"><i class="sort-by-asc"></i></span>
+                        <span ng-show="direction[0] === 'desc'"><i class="sort-by-asc"></i></span>
+                    </span>   
+                </strong></th>
                 <th ng-repeat = "type in ::extraIdentifierTypes track by $index"><strong>{{type.name}}</strong></th>
-                <th><strong>{{ ::'REGISTRATION_LABEL_NAME' | translate}}</strong></th>
+                <th  ng-click="sortPatient('givenName');orderByField='givenName'"><strong>{{ ::'REGISTRATION_LABEL_NAME' | translate}}
+                    <span ng-show="orderByField == 'givenName'" class="sort-pos">
+                        <span ng-show="direction[0] === 'asc'"><i class="sort-by-asc"></i></span>
+                        <span ng-show="direction[0] === 'desc'"><i class="sort-by-asc"></i></span>
+                    </span>
+                </strong></th>
                 <th ng-repeat = "field in ::personSearchResultsConfig.fields track by $index"><strong>{{::convertToTableHeader(field)}}</strong></th>
                 <th><strong>{{ ::'REGISTRATION_LABEL_GENDER' | translate}}</strong></th>
                 <th><strong>{{ ::'REGISTRATION_LABEL_AGE' | translate}}</strong></th>
@@ -151,7 +168,7 @@
             <tbody>
             <tr ng-repeat="result in results">
                 <td>
-                    <a tabindex="{{ :: 8 + $index + 1 }}" ng-if="::(searchActions.length > 0)" ng-click="forPatient(result).doExtensionAction(searchActions[0])">
+                    <a tabindex="{{ :: 9 + $index + 1 }}" ng-if="::(searchActions.length > 0)" ng-click="forPatient(result).doExtensionAction(searchActions[0])">
                         {{::result.identifier || 'Not Assigned'}}
                     </a>
                 </td>
@@ -171,6 +188,7 @@
         </table>
     </div>
 
+        <!-- LOCAL SEARCH LIST -->
     <div id="loader" ng-show="loadingMoreResults()"></div>
 
     <div class="note-container no-more-results" ng-if="noMoreResultsPresent">
