--- a/ui/app/home/views/login.html
+++ b/ui/app/home/views/login.html
@@ -1,5 +1,5 @@
 <div class="clint-logo-wrapper">
-    <img class="implementor-logo" >
+    <img class="implementor-logo">
     <span ng-if="titleText" class="title_text"> {{'LOGIN_PAGE_TITLE_TEXT' | translate }} </span>
 </div>
 
@@ -21,7 +21,7 @@
             <div class="note-container">
                 <div class="note error" ng-if="!isChrome()">
                     <div class="text">
-                        {{ 'LOGIN_UNSUPPORTED_BROWSER_KEY'  | translate }}
+                        {{ 'LOGIN_UNSUPPORTED_BROWSER_KEY' | translate }}
                     </div>
                 </div>
                 <div class="note error" ng-show="errorMessageTranslateKey">
@@ -81,7 +81,7 @@
         <p>{{warningMessage | translate :timeZoneObject}} </p>
     </div>
     <div class="warning-message">
-        <p>THIS IS STILL AN ALPHA VERSION OF BAHMNI 0.92</p>
+        <p> eRegister BAHMNI 0.92 beta</p>
     </div>
 
     <div ng-show="bottomLogos" class="bottom-logos-wrapper">
