--- a/common/displaycontrols/prescription/views/prescription.html
+++ b/common/displaycontrols/prescription/views/prescription.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../styles/clinicalPrint.css"/>
+<link rel="stylesheet" href="../styles/clinicalPrint.cc613039.css"/>
 <div class="print-wrapper prescription-print">
     <ng-include src="'common/views/patientInfoPrint.html'"></ng-include>
     <section bindonce="drugOrders">
