--- a/clinical/dashboard/views/clinicalDashboardHeader.html
+++ b/clinical/dashboard/views/clinicalDashboardHeader.html
@@ -16,22 +16,25 @@
             </span>
             </a>
 
-
             <ul class="header-tabs consultation-tabs" ng-if="!isCurrentUrlShr()">
                 <li class="tab-item" ng-repeat="board in availableBoards track by $index" ng-class="{'tab-selected':board.isSelectedTab}">
                     <a ng-click="showBoard($index)">{{ board | titleTranslate }}</a>
-                                    </li>
-                                </ul>
-                                <ul class="header-tabs consultation-tabs" ng-if="isCurrentUrlShr()">
-                                    <li class="tab-item" ng-repeat="board in sharedhealthrecordBoards track by $index" ng-class="{'tab-selected':board.isSelectedTab}">
+                </li>
+            </ul>
+            <ul class="header-tabs consultation-tabs" ng-if="isCurrentUrlShr()">
+                <li class="tab-item" ng-repeat="board in sharedhealthrecordBoards track by $index" ng-class="{'tab-selected':board.isSelectedTab}">
                     <a ng-click="showBoard($index)">{{ board | titleTranslate }}</a>
                 </li>
             </ul>
+            <button class="confirm save-consultation" show-if-privilege="app:clinical:generate_id" ng-show="showUniqueIDGenerator" ng-click="generateAssignPatientId()" accesskey="{{'SAVE_ACCESS_KEY' | translate}}" ng-class="{'hideSaveText':availableBoards.length > 6}" ng-if="!retrospectiveEntry">
+                <i class="fa fa-key fa-large"></i>
+            </button>
 
             <button class="toggle-patient" ng-click="toggleControlPanel()" ng-class="{'shift': showControlPanel, 'hide-ipad': availableBoards }">
                 <i class="fa fa-bars fa-white fa-large"></i>
             </button>
-            <button class="confirm save-consultation" ng-show="availableBoards" single-click="save()" accesskey="{{'SAVE_ACCESS_KEY' | translate}}" ng-class="{'hideSaveText':availableBoards.length > 6}" ng-if="!isCurrentUrlShr()">
+
+            <button class="confirm save-consultation" ng-show="availableBoards" single-click="save()" accesskey="g" ng-class="{'hideSaveText':availableBoards.length > 6}" ng-if="!isCurrentUrlShr()">
                 <i class="fa fa-save"></i>
                 <span class="text" ng-bind-html="'CLINICAL_SAVE_TRANSLATION_KEY'| translate"></span>
             </button>
@@ -104,13 +107,11 @@
                         </div>
                     </div>
                 </div>
-            <span class="grouped-buttons">
-                 <a class="btn--left btn--success" ng-if="visitHistory.activeVisit || retrospectiveEntry || allowConsultation()" ng-click="openConsultation()" accesskey="{{'CONSULTATION_SHORTCUT_KEY' | translate}}" ng-bind-html="'CONSULTATION_TAB_KEY' | translate">
-                 </a>
-                 <a class="btn--left btn--success" ng-if="!retrospectiveEntry" ng-click="generateAssignPatientId()" accesskey="g" ng-bind-html="'UIDGEN_TAB_KEY' | translate">
-                 </a>
-             <a class="btn--left btn--success" ng-click="opensharedhealthrecord()" accesskey="{{'SHR_SHORTCUT_KEY ' | translate }}" ng-bind-html="'SHR_TAB_KEY' | translate">
-                 </a>
+          <span class="grouped-buttons">
+                <a class="btn--left btn--success" ng-if="visitHistory.activeVisit || retrospectiveEntry || allowConsultation()" ng-click="openConsultation()" accesskey="{{'CONSULTATION_SHORTCUT_KEY' | translate}}" ng-bind-html="'CONSULTATION_TAB_KEY' | translate">
+                </a>
+                <a class="btn--left btn--success" ng-click="opensharedhealthrecord()" accesskey="{{'SHR_SHORTCUT_KEY ' | translate }}" ng-bind-html="'SHR_TAB_KEY' | translate">
+                </a>
                 <a class="btn--right btn--success" title="{{'OPEN_IN_NEW_WINDOW'|translate}}" ng-if="visitHistory.activeVisit || retrospectiveEntry" ng-click="openConsultationInNewTab()"><i class="fa fa-external-link"></i></a>
            </span>
 
