--- a/clinical/consultation/views/sharedRecord.html
+++ b/clinical/consultation/views/sharedRecord.html
@@ -14,6 +14,9 @@
                     <button tabindex="6" type="submit" ng-disabled="disableSearchButton()">Search</button>
                 </article>
             </form>
+            <article class="fl" style="margin-left:5px">
+                <button tabindex="6" type="submit" ng-click="retriveAndViewObs()">View Long. Obs</button>
+            </article>
     </div>
 	
     <div ng-if="resultsPresent()" class="registraition-search-results-container">
@@ -47,5 +50,33 @@
             </tr>
             </tbody>
         </table>
+    </div>
+
+    <div ng-if="restResultsPresent()" class="registraition-search-results-container">
+        <table class="table">
+            <thead>
+            <tr>
+                <th><strong>Location</strong></th>
+				<th><strong>Observation Date</strong></th>
+                <th><strong>Observation</strong></th>
+                <th><strong>Obs. Value</strong></th>
+            </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="result in restResults">
+                    <td>{{::result.locationName}}</td>
+                    <td>{{::result.encounterDate}}</td>
+                    <td>{{::result.observationName}}</td>
+                    <td>{{::result.observationValue}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="note-container no-search-results" ng-if="noResultsMessage">
+        <div class="note warning">
+            <div class="text">
+                <p>{{noResultsMessage | translate:patientIdentifier }}</p>
+            </div>
+        </div>
     </div>
 </div>
