allowing date input from date_time widget only and not from the keyboard on all date elements in the project

--- a/ui/app/common/concept-set/views/observation.html
+++ b/ui/app/common/concept-set/views/observation.html
@@ -213,7 +213,7 @@
                     </div>
 
                     <div ng-switch-when="datetime">
-                        <datetimepicker model="observation.value"
+                        <datetimepicker onkeypress="return false" model="observation.value"
                                         observation="::observation"
                                         ng-blur="handleUpdate()"
                                         allow-future-dates="(observation.conceptUIConfig && observation.conceptUIConfig.allowFutureDates)"
