--- a/ui/app/common/concept-set/views/observationDataTypes/html5DataType.html
+++ b/ui/app/common/concept-set/views/observationDataTypes/html5DataType.html
@@ -6,7 +6,7 @@
        type="number"
        focus-me="::observation.isFocused" tabindex="1"/>
 
-<input id="{{::observation.uniqueId}}" obs-constraints obs="::observation"
+<input onkeypress="return false" id="{{::observation.uniqueId}}" obs-constraints obs="::observation"
        ng-if="!observation.isNumeric() && !observation._isDateTimeDataType() && !observation.conceptUIConfig.displayMonthAndYear" ng-disabled="observation.disabled"
        ng-model="observation.value" ng-change="handleUpdate()"
        ng-class="{'is-abnormal': observation.abnormalObs.value, 'illegalValue': !observation.isValid(atLeastOneValueIsSet,conceptSetRequired), 'computed-field': observation.isComputedAndEditable()}"
