--- a/ui/app/registration/views/dob.html
+++ b/ui/app/registration/views/dob.html
@@ -3,7 +3,7 @@
         <label for="birthdate">{{ ::'REGISTRATION_LABEL_DOB' | translate}}<span class="asterick" ng-show="::dobMandatory">*</span></label>
     </div>
     <div class="field-value">
-        <input id="birthdate" type="date" ng-model="patient.birthdate"  max="{{::today}}"
+        <input id="birthdate" type="date" onkeypress="return false" ng-model="patient.birthdate"  max="{{::today}}"
                ng-change="patient.calculateAge()" ng-blur="handleUpdate('birthdate')" ng-required="::dobMandatory">
     </div>
     <div class="showOn-desktop-registration">
