Applied few transformations to SHR obs results

--- a/ui/app/clinical/consultation/views/sharedRecord.html
+++ b/ui/app/clinical/consultation/views/sharedRecord.html
@@ -59,7 +59,7 @@
             <thead>
             <tr>
                 <th><strong>Location</strong></th>
-				<th><strong>Observation Date</strong></th>
+				<th><strong>Encounter Date</strong></th>
                 <th><strong>Observation</strong></th>
                 <th><strong>Obs. Value</strong></th>
             </tr>
