Adding Version Control

--- a/home/views/login.html
+++ b/home/views/login.html
@@ -77,6 +77,7 @@
     </div>
     <div class="warning-message">
         <p> eRegister BAHMNI 0.92 beta</p>
+        <p id="eregisterversion" ng-model="result"> Version :{{ result.day }}-{{ result.month }}-{{ result.year }}</p>
     </div>
 
     <div ng-show="bottomLogos" class="bottom-logos-wrapper">
