--- a/clinical/common/views/visitTabPrint.html
+++ b/clinical/common/views/visitTabPrint.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="../styles/clinicalPrint.css" media="print"/>
+    <link rel="stylesheet" href="../styles/clinicalPrint.c43f0ae4.css" media="print"/>
 </head>
 <body>
     <div class="print-wrapper print-patient-summary">
