--- a/common/patient-search/views/patientsList.html
+++ b/common/patient-search/views/patientsList.html
@@ -63,18 +63,29 @@
                 </table>
             </div>
         </resize>
+        <style>
+            .notPresentCagMember{
+                background-color: gray;   
+                opacity: 0.5;
+            }
+        </style>
         <resize ng-if="search.isTileView()" search-results="search.searchResults" visible-results="search.visiblePatients" class="active-visits">
             <ul>
-                <li ng-repeat="patient in search.visiblePatients" class="active-patient" ng-click="forwardPatient(patient)">
-                    <img class="smallImages" ng-src="{{::patient.image}}" fallback-src="../images/blank-user.png">
+                <!-- <ul ng-show="cagLoad==0"> -->
+                <li ng-repeat="patient in search.visiblePatients" class="active-patient" ng-class="{notPresentCagMember : patient.presentMember==false}" ng-click="checkifCagPresentMember(patient, patient.showIsCag, patient.presentMember)">
+                    <img class="smallImages" ng-show="patient.showIsCag==undefined" ng-src="{{::patient.image}}" fallback-src="../images/blank-user.png">
+                    <img class="smallImages" ng-show="patient.showIsCag==true" ng-src="../images/users.svg.png" style="opacity: 0.34" fallback-src="../images/users.svg.png">
                     
                     <!--Added patient Queue numbering-->
                     <div>{{$index +1}}</div>
                     
                     <div class="patient-name">{{::patient.name}}</div>
-                    <div class="patient-id">{{::patient.identifier}}</div>
+                    <div class="patient-id" ng-show="patient.showIsCag==undefined">{{::patient.identifier}}</div>
+                    <div class="patient-id" ng-show="patient.showIsCag==true"><span style="color: green"><b>CAG|</b></span>{{patient.cagName}}</div>
                     <i class="ipd-indication fa fa-bed" ng-if="::(patient.hasBeenAdmitted===true||patient.hasBeenAdmitted==='true')"></i>
                     <i class="ipd-indication fa fa-plus" ng-if="::(patient.CodedP===true||patient.CodedP==='true')"></i>
+                    <i class="ipd-indication fa fa-check" style="left: 0" ng-if="patient.presentMember==true"></i>
+
                     <i class="vrl-indication fa fa-eyedropper" ng-if="::(patient.BloodDrawDue===true||patient.BloodDrawDue==='true')"></i>                    
                 </li>
             </ul>
